# mobile_tests

./: .env  .env.bstack  .env.real_device  config.py  project.py  pyproject.toml  requirements.txt
selene_in_action/utils/: allure.py  file.py
tests/: conftest.py
tests/android_app/: test_wiki_for_real_device.py  test_wikipedia.py
tests/ios_app/: test_sample.py  test_wikipedia.py
